--- a/app/src/main/res/layout-land/activity_details.xml
+++ b/app/src/main/res/layout-land/activity_details.xml
@@ -6,9 +6,9 @@
 
     <ImageView
         android:id="@+id/backdrop"
-        android:contentDescription="@string/backdrop_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/backdrop_description"
         android:scaleType="centerCrop" />
 
     <ScrollView
@@ -18,10 +18,9 @@
         <FrameLayout
             android:id="@+id/frame_detail"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingTop="150dip"
-            android:layout_marginLeft="32dp"
-            android:layout_marginRight="32dp"
-             />
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/land_detail_side_margin"
+            android:layout_marginRight="@dimen/land_detail_side_margin"
+            android:paddingTop="@dimen/land_detail_top_margin" />
     </ScrollView>
 </RelativeLayout>
