--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -102,6 +102,44 @@
                     android:layout_marginTop="@dimen/space_text_margin"
                     android:lineSpacingMultiplier="1.0"
                     android:textSize="@dimen/second_text_size" />
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <RelativeLayout
+                        android:id="@+id/rating_view"
+                        android:layout_width="@dimen/size_big_star"
+                        android:layout_height="@dimen/size_big_star">
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:contentDescription="@string/no_poster"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/star_big" />
+
+                        <TextView
+                            android:id="@id/rating_pic"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true" />
+
+                    </RelativeLayout>
+
+                    <TextView
+                        android:id="@+id/rating_pic_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:layout_marginLeft="@dimen/left_star_margin"
+                        android:layout_marginStart="@dimen/left_star_margin"
+                        android:layout_toEndOf="@id/rating_view"
+                        android:layout_toRightOf="@id/rating_view" />
+
+                </RelativeLayout>
+
+
             </LinearLayout>
 
         </RelativeLayout>
