begin work - send wall post vk

--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -139,6 +139,13 @@
 
                 </RelativeLayout>
 
+                <Button
+                    android:id="@+id/post_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/post"
+                    android:visibility="gone"/>
+
 
             </LinearLayout>
 
