--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,18 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/icons"
     android:orientation="vertical">
 
-    <FrameLayout
-        android:id="@+id/head"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <RelativeLayout
                 android:id="@+id/poster_container"
@@ -42,7 +38,7 @@
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
-                    android:background="@drawable/ic_play_arrow"
+                    android:background="@drawable/background_play_button"
                     android:onClick="onClick"
                     android:visibility="gone" />
             </RelativeLayout>
@@ -56,8 +52,6 @@
                 android:layout_marginRight="@dimen/right_margin"
                 android:layout_marginStart="@dimen/left_margin"
                 android:layout_marginTop="@dimen/top_margin"
-                android:layout_toEndOf="@id/poster_container"
-                android:layout_toRightOf="@id/poster_container"
                 android:orientation="vertical">
 
                 <TextView
@@ -148,15 +142,12 @@
 
 
             </LinearLayout>
-
-        </RelativeLayout>
-    </FrameLayout>
+        </LinearLayout>
 
     <TextView
         android:id="@+id/overview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/head"
         android:layout_margin="@dimen/border_margin"
         android:lineSpacingMultiplier="1.2"
         android:textSize="@dimen/second_text_size" />
@@ -165,6 +156,12 @@
         android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_below="@id/overview"
-        android:background="@color/divider" />
-</RelativeLayout>
+        android:background="@color/divider"/>
+
+    <!--<android.support.v7.widget.RecyclerView-->
+        <!--android:id="@+id/rv_crew_list"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_margin="8dp"-->
+        <!--android:scrollbars="vertical"/>-->
+</LinearLayout>
