--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -157,11 +157,18 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/divider"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/border_margin"
+        android:text="Crew"
+        android:textStyle="bold"
+        android:textSize="@dimen/title_size"/>
 
-    <!--<android.support.v7.widget.RecyclerView-->
-        <!--android:id="@+id/rv_crew_list"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_margin="8dp"-->
-        <!--android:scrollbars="vertical"/>-->
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_crew_list"
+        android:layout_width="wrap_content"
+        android:layout_height="180dp"
+        android:layout_margin="@dimen/border_margin"
+        android:scrollbars="horizontal"/>
 </LinearLayout>
