--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -161,7 +161,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/border_margin"
-        android:text="Crew"
+        android:text="@string/label_detail_cast"
         android:textStyle="bold"
         android:textSize="@dimen/title_size"/>
 
