--- a/app/src/main/res/layout/adapter_crews.xml
+++ b/app/src/main/res/layout/adapter_crews.xml
@@ -1,29 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
+              android:layout_width="@dimen/crew_profile_width"
+              android:layout_height="@dimen/crew_item_height"
               android:layout_margin="2dp"
               android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/iv_profile_crew"
-        android:layout_width="100dp"
-        android:layout_height="140dp"
-        android:contentDescription="@string/content_description_profile"
-        android:scaleType="centerCrop"/>
+    <RelativeLayout
+        android:layout_width="@dimen/crew_profile_width"
+        android:layout_height="@dimen/crew_profile_height">
 
-    <TextView
-        android:id="@+id/tv_name_crew"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:textSize="14sp"/>
+        <ImageView
+            android:id="@+id/iv_profile_crew"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="@string/content_description_profile"
+            android:scaleType="centerCrop"/>
+
+        <TextView
+            android:id="@+id/tv_name_crew"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/black_with_alpha"
+            android:gravity="center_horizontal"
+            android:textColor="@android:color/white"
+            android:layout_alignParentBottom="true"
+            android:textSize="12sp"/>
+    </RelativeLayout>
 
     <TextView
         android:id="@+id/tv_charter_crew"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+        android:gravity="center_horizontal"
         android:textColor="@color/secondary_text"
         android:textSize="12sp"/>
 </LinearLayout>
