--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -29,4 +29,8 @@
     <dimen name="left_star_margin">4dp</dimen>
     <dimen name="size_big_star">60dp</dimen>
     <dimen name="padding_language_radio_group">16dp</dimen>
+    <dimen name="crew_profile_width">100dp</dimen>
+    <dimen name="crew_profile_height">140dp</dimen>
+    <dimen name="crew_item_height">180dp</dimen>
+
 </resources>
