--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -166,9 +166,16 @@
         android:textSize="@dimen/title_size"/>
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_crew_list"
+        android:id="@+id/rv_cast_list"
         android:layout_width="wrap_content"
         android:layout_height="180dp"
         android:layout_margin="@dimen/border_margin"
         android:scrollbars="horizontal"/>
+
+    <!--<android.support.v7.widget.RecyclerView-->
+        <!--android:id="@+id/rv_crew_list"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="180dp"-->
+        <!--android:layout_margin="@dimen/border_margin"-->
+        <!--android:scrollbars="horizontal"/>-->
 </LinearLayout>
