transparent background and init progress for detail avtivity

--- a/app/src/main/res/layout-land/activity_details.xml
+++ b/app/src/main/res/layout-land/activity_details.xml
@@ -23,4 +23,11 @@
             android:layout_marginRight="@dimen/land_detail_side_margin"
             android:paddingTop="@dimen/land_detail_top_margin" />
     </ScrollView>
+
+    <ProgressBar
+        android:id="@android:id/progress"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/white"
+        android:visibility="visible"/>
 </RelativeLayout>
