--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="divider">#B6B6B6</color>
     <color name="background">#F5F5F5</color>
     <color name="black_with_alpha">#7F000000</color>
+    <color name="white_with_alpha">#CCFFFFFF</color>
+
 </resources>
