--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,6 @@
     <color name="background">#F5F5F5</color>
     <color name="black_with_alpha">#7F000000</color>
     <color name="white_with_alpha">#CCFFFFFF</color>
+    <color name="login_button_color">#BBBEC3</color>
 
 </resources>
