--- a/app/src/main/res/layout/fragment_recycler_main.xml
+++ b/app/src/main/res/layout/fragment_recycler_main.xml
@@ -12,7 +12,8 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_list_films"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            tools:listitem="@layout/adapter_item"/>
     </android.support.v4.widget.SwipeRefreshLayout>
 
     <TextView
@@ -22,7 +23,6 @@
         android:layout_centerInParent="true"
         android:text="@string/empty_message"
         android:visibility="gone"/>
-
 
     <TextView
         android:id="@+id/tv_error"
