--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,6 @@
         <item name="colorAccent">@color/accent</item>
         <item name="android:textColor">@color/primary_text</item>
         <item name="android:button">@color/primary</item>
-        <item name="android:colorBackground">@color/background</item>
+        <item name="android:colorBackground">@android:color/darker_gray</item>
     </style>
 </resources>
