--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -167,27 +167,50 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/divider"/>
-    <TextView
-        android:id="@+id/tv_cast_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/border_margin"
-        android:text="@string/label_detail_cast"
-        android:textStyle="bold"
-        android:textSize="@dimen/title_size"/>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_cast_list"
-        android:layout_width="wrap_content"
-        android:layout_height="180dp"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/person_adapter_height"
         android:layout_margin="@dimen/border_margin"
-        android:scrollbars="horizontal"
-        tools:listitem="@layout/adapter_crews"/>
+        android:orientation="vertical">
 
-    <!--<android.support.v7.widget.RecyclerView-->
-        <!--android:id="@+id/rv_crew_list"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="180dp"-->
-        <!--android:layout_margin="@dimen/border_margin"-->
-        <!--android:scrollbars="horizontal"/>-->
+        <TextView
+            android:id="@+id/tv_cast_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/label_detail_cast"
+            android:textStyle="bold"
+            android:textSize="@dimen/title_size"/>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_cast_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scrollbars="horizontal"
+            tools:listitem="@layout/adapter_crews"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/person_adapter_height"
+        android:layout_marginLeft="@dimen/border_margin"
+        android:layout_marginStart="@dimen/border_margin"
+        android:layout_marginRight="@dimen/border_margin"
+        android:layout_marginEnd="@dimen/border_margin"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tv_crew_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/label_detail_crew"
+            android:textStyle="bold"
+            android:textSize="@dimen/title_size"/>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_crew_list"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:scrollbars="horizontal"
+            tools:listitem="@layout/adapter_crews"/>
+    </LinearLayout>
 </LinearLayout>
