add navigation drawer

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -23,8 +23,8 @@
     <dimen name="date_size">14sp</dimen>
     <dimen name="rating_margin">8dp</dimen>
     <dimen name="rating_text_size">12sp</dimen>
-    <dimen name="land_detail_top_margin">160dip</dimen>
-    <dimen name="land_detail_side_margin">32dp</dimen>
+    <dimen name="detail_top_margin">160dip</dimen>
+    <dimen name="detail_side_margin">32dp</dimen>
     <dimen name="port_detail_top_margin">240dip</dimen>
     <dimen name="left_star_margin">4dp</dimen>
     <dimen name="size_big_star">60dp</dimen>
@@ -38,5 +38,7 @@
     <dimen name="adapter_poster_width">85dp</dimen>
     <dimen name="adapter_poster_height">115dp</dimen>
     <dimen name="person_adapter_height">210dp</dimen>
+    <dimen name="nav_header_vertical_spacing">16dp</dimen>
+    <dimen name="nav_header_height">160dp</dimen>
 
 </resources>
