--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,13 +1,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MainActivity">
+    tools:context=".app.MainScreenActivity">
 
     <item android:id="@+id/action_search"
         android:title="@string/action_internet"
-        android:icon="@android:drawable/ic_menu_search"
+        android:icon="@drawable/ic_search_24dp"
         android:orderInCategory="1"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         app:actionViewClass="android.support.v7.widget.SearchView"/>
     <item android:id="@+id/language_setting"
         android:title="@string/language_setting"
