--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -2,10 +2,10 @@
 <RelativeLayout android:id="@+id/root"
                 xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="match_parent">
 
 
     <FrameLayout android:id="@+id/frame_detail"
                  android:layout_width="match_parent"
-                 android:layout_height="wrap_content"/>
+                 android:layout_height="match_parent"/>
 </RelativeLayout>
