change behavior search activity on fragment and add fade animation for progress

--- a/app/src/main/res/layout/fragment_recycler_main.xml
+++ b/app/src/main/res/layout/fragment_recycler_main.xml
@@ -2,6 +2,7 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="@android:color/white"
                 tools:context=".app.MainScreenActivity">
 
     <android.support.v4.widget.SwipeRefreshLayout
@@ -36,7 +37,6 @@
         android:id="@+id/pb_progress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:visibility="gone"/>
+        android:layout_centerInParent="true"/>
 
 </RelativeLayout>
