--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -6,7 +6,7 @@
     android:fitsSystemWindows="true">
 
     <FrameLayout
-        android:id="@+id/frame_dinamic"
+        android:id="@+id/content"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:orientation="vertical"/>
