--- a/app/src/main/res/layout/fragment_recycler_main.xml
+++ b/app/src/main/res/layout/fragment_recycler_main.xml
@@ -11,10 +11,11 @@
         android:layout_height="match_parent">
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_list_films"
+            android:id="@android:id/list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:listitem="@layout/adapter_item"/>
+            tools:listitem="@layout/adapter_item"
+            android:scrollbars="vertical"/>
     </android.support.v4.widget.SwipeRefreshLayout>
 
     <TextView
@@ -37,6 +38,7 @@
         android:id="@+id/pb_progress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"/>
+        android:layout_centerInParent="true"
+        android:visibility="gone"/>
 
 </RelativeLayout>
