pagination in progress

--- a/app/src/main/res/layout/fragment_recycler_main.xml
+++ b/app/src/main/res/layout/fragment_recycler_main.xml
@@ -19,7 +19,7 @@
     </android.support.v4.widget.SwipeRefreshLayout>
 
     <TextView
-        android:id="@+id/tv_empty"
+        android:id="@android:id/empty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
@@ -34,11 +34,21 @@
         android:text="@string/error_message"
         android:visibility="gone"/>
 
+
     <ProgressBar
-        android:id="@+id/pb_progress"
+        android:id="@android:id/progress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:visibility="gone"/>
+        android:visibility="gone" />
+
+    <ProgressBar
+        android:id="@android:id/secondaryProgress"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:layout_alignParentBottom="true"
+        android:visibility="gone" />
 
 </RelativeLayout>
