--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<merge
     android:id="@+id/frame_detail"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
