--- a/app/src/main/res/layout/adapter_item.xml
+++ b/app/src/main/res/layout/adapter_item.xml
@@ -4,57 +4,73 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     card_view:cardCornerRadius="@dimen/card_corner"
-    card_view:cardUseCompatPadding="true"
+    android:foregroundGravity="center"
+    android:layout_margin="16dp"
     tools:showIn="@layout/fragment_recycler_main">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:background="@android:color/black"
+        android:layout_height="match_parent"
         android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/backdrop"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="@string/backdrop_description"
+            android:scaleType="centerCrop"/>
 
         <ImageView
             android:id="@+id/poster"
             android:layout_width="@dimen/adapter_poster_width"
             android:layout_height="@dimen/adapter_poster_height"
-            android:background="@drawable/w185"
+            android:padding="8dp"
             android:contentDescription="@string/poster_description"
-            android:layout_gravity="center_horizontal"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
             android:scaleType="centerCrop"/>
 
-        <TextView
-            android:id="@+id/title"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:singleLine="true"
-            android:textColor="@android:color/white"
-            android:textStyle="bold"
-            android:layout_below="@id/poster"
-            tools:text="Title for movie"/>
+            android:layout_toRightOf="@id/poster"
+            android:layout_toEndOf="@id/poster"
+            android:padding="8dp"
+            android:layout_alignParentBottom="true"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/secondary_text"
-            android:textSize="@dimen/rating_text_size"
-            android:textStyle="normal"
-            android:layout_below="@id/title"
-            tools:text="November 2015"/>
+            <TextView
+                android:id="@+id/tv_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:singleLine="true"
+                android:textColor="@android:color/white"
+                android:textStyle="bold"
+                tools:text="Title for movie"/>
 
-        <TextView
-            android:id="@+id/rating_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/secondary_text"
-            android:textSize="@dimen/rating_text_size"
-            android:textStyle="normal"
-            android:layout_below="@id/date"
-            tools:text="Rating 7.0/10"/>
+            <TextView
+                android:id="@+id/date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/secondary_text"
+                android:textSize="@dimen/rating_text_size"
+                android:textStyle="normal"
+                tools:text="November 2015"/>
+
+            <TextView
+                android:id="@+id/rating_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/secondary_text"
+                android:textSize="@dimen/rating_text_size"
+                android:textStyle="normal"
+                tools:text="Rating 7.0/10"/>
+        </LinearLayout>
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
