--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -20,7 +20,7 @@
         <FrameLayout
             android:id="@+id/movies_container"
             android:layout_width="match_parent"
-            android:layout_height="180dp"/>
+            android:layout_height="@dimen/home_container_height"/>
 
         <TextView
             android:layout_width="match_parent"
@@ -32,7 +32,7 @@
         <FrameLayout
             android:id="@+id/series_container"
             android:layout_width="match_parent"
-            android:layout_height="180dp"/>
+            android:layout_height="@dimen/home_container_height"/>
 
         <TextView
             android:layout_width="match_parent"
@@ -44,7 +44,7 @@
         <FrameLayout
             android:id="@+id/people_container"
             android:layout_width="match_parent"
-            android:layout_height="180dp"/>
+            android:layout_height="@dimen/home_container_height"/>
     </LinearLayout>
 
 </ScrollView>
