--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -41,5 +41,6 @@
     <dimen name="nav_header_vertical_spacing">16dp</dimen>
     <dimen name="nav_header_height">160dp</dimen>
     <dimen name="size_home_title">23sp</dimen>
+    <dimen name="home_container_height">200dp</dimen>
 
 </resources>
